--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ footer{background:#fff;text-align:center;padding:40px;border-top:1px solid #e5e5
 <body>
 
 <header>
+<img src="assets/logo.png" alt="GC.digital logo" style="width:140px;margin-bottom:20px">
 <h1>GC.digital</h1>
 <p>GC.digital est une plateforme de formation premium en marketing digital engineering. Elle accompagne les débutants jusqu’au niveau avancé grâce à une progression structurée, sécurisée et orientée performance.</p>
 </header>
@@ -133,3 +134,4 @@ update();
 
 </body>
 </html>
+
