--- a/index.html
+++ b/index.html
@@ -1,141 +1,154 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GC.digital – Formation Marketing Digital</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Bienvenue dans la formation GC.dgital</title>
 
 <style>
-:root{--black:#000;--dark:#1d1d1f;--gray:#f5f5f7;--white:#fff;--blue:#0071e3}
-*{margin:0;padding:0;box-sizing:border-box;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto}
+:root{
+--black:#000;
+--dark:#1d1d1f;
+--gray:#f5f5f7;
+--white:#fff;
+--blue:#0071e3;
+}
+*{box-sizing:border-box;margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif}
 body{background:var(--gray);color:var(--dark)}
-header{background:#fff;padding:90px 20px;text-align:center;border-bottom:1px solid #e5e5e5}
-header h1{text-decoration:underline;font-size:3.4rem}
-header p{max-width:900px;margin:25px auto;color:#555;font-size:1.2rem}
+header{background:var(--white);padding:90px 20px;text-align:center;border-bottom:1px solid #e5e5e5}
+header h1{font-size:3.4rem;text-decoration:underline;text-underline-offset:14px}
+header p{max-width:900px;margin:25px auto 0;font-size:1.2rem;color:#555}
 main{max-width:1200px;margin:90px auto;padding:0 20px}
-h2{text-align:center;font-size:2.3rem;margin-bottom:40px;text-decoration:underline}
-h3{text-decoration:underline}
+h2{text-align:center;font-size:2.4rem;margin-bottom:40px;text-decoration:underline;text-underline-offset:8px}
+h3{text-decoration:underline;text-underline-offset:6px;margin-bottom:12px}
 .chapter{margin-bottom:90px}
 .modules{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px}
-.module{background:#fff;padding:30px;border-radius:22px;transition:.3s}
+.module{background:var(--white);padding:30px;border-radius:22px;transition:.3s}
 .module:hover{transform:translateY(-6px);box-shadow:0 20px 40px rgba(0,0,0,.08)}
-iframe{width:100%;height:200px;border-radius:14px;border:none;margin-top:10px}
-.btn{background:#000;color:#fff;border:none;padding:16px 36px;border-radius:999px;cursor:pointer;font-size:1rem}
-progress{width:100%;height:18px}
-footer{background:#fff;text-align:center;padding:40px;border-top:1px solid #e5e5e5}
-.hidden{display:none}
+.btn{background:var(--black);color:var(--white);border:none;padding:16px 36px;border-radius:999px;font-size:1.05rem;cursor:pointer;width:100%}
+progress{width:100%;height:14px;margin-top:10px}
+iframe{width:100%;height:220px;border-radius:14px;border:none}
+footer{background:var(--white);border-top:1px solid #e5e5e5;text-align:center;padding:40px;color:#555}
+@media(max-width:600px){header h1{font-size:2.6rem}}
 </style>
 </head>
 <body>
 
 <header>
-  <h1>GC.digital</h1>
-  <p>
-    GC.digital est une plateforme de formation premium en marketing digital engineering.
-    Elle accompagne les débutants jusqu’au niveau avancé grâce à une progression
-    structurée, sécurisée et orientée performance.
-  </p>
+<h1>GC.digital</h1>
+<p>
+GC.digital est une formation de <strong>marketing digital qui aide les débutants et les nouveaux,</strong> conçue pour que vous sentez moins perdus.
+La formation transforme le marketing en un système clair : stratégie, contenu, publicité, data et performance.
+L’accès est payant, sécurisé et progressif.
+</p>
 </header>
-
 
 <main>
 
+<!-- PAYWALL -->
 <section class="chapter" id="paywall" style="text-align:center">
-<h2>Accès privé à la formation</h2>
-<p>Le paiement et la création de compte sont obligatoires pour accéder à la formation.</p>
+<h2>Accès sécurisé</h2>
+<p style="max-width:700px;margin:20px auto;color:#555">
+Paiement et inscription obligatoires. Sans compte actif, la formation reste verrouillée.
+</p>
 <form id="authForm" style="max-width:420px;margin:40px auto">
-<input required type="email" placeholder="Email" style="width:100%;padding:14px;margin-bottom:12px">
-<input required type="password" placeholder="Mot de passe" style="width:100%;padding:14px;margin-bottom:20px">
-<button class="btn" type="submit">Payer avec Stripe</button>
+<input required type="email" placeholder="Email" style="width:100%;padding:14px;border-radius:12px;border:1px solid #ccc;margin-bottom:12px">
+<input required type="password" placeholder="Mot de passe" style="width:100%;padding:14px;border-radius:12px;border:1px solid #ccc;margin-bottom:20px">
+<button class="btn">Payer avec Stripe & créer mon compte</button>
 </form>
-<p style="font-size:.9rem;color:#777">Stripe Checkout réel – Firebase Auth</p>
+<p style="font-size:.9rem;color:#777">Stripe réel + Auth backend (Firebase / Supabase)</p>
 </section>
 
-<div id="app" class="hidden">
+<div id="formation" style="display:none">
 
+<!-- DASHBOARD -->
 <section class="chapter">
 <h2>Dashboard élève</h2>
 <div class="modules">
 <div class="module"><h3>Niveau</h3><p id="level">Débutant</p></div>
-<div class="module"><h3>Progression</h3><progress id="progress" value="0" max="100"></progress><p id="progressText">0%</p></div>
-<div class="module"><h3>Certificat</h3><p id="certificate">Bloqué</p></div>
+<div class="module"><h3>Progression</h3><progress id="globalProgress" value="0" max="100"></progress><p id="progressText">0 %</p></div>
+<div class="module"><h3>Certificat</h3><p id="cert">Bloqué (100 % requis)</p></div>
 </div>
 </section>
 
+<!-- CHAPITRE 1 -->
 <section class="chapter">
 <h2>Chapitre 1 – Fondamentaux</h2>
 <div class="modules">
-<div class="module"><h3>Base du marketing digital</h3></div>
-<div class="module"><h3>Réseaux sociaux pour débutants</h3></div>
-<div class="module"><h3>Création de contenu efficace</h3></div>
-<div class="module"><h3>Lancer sa première stratégie</h3></div>
+<div class="module"><h3>Base du marketing digital</h3><iframe src="https://www.youtube.com/embed/VeuspvV7DCg" allowfullscreen></iframe><progress id="m1" value="0" max="100"></progress></div>
+<div class="module"><h3>Réseaux sociaux pour débutants</h3><iframe src="https://www.youtube.com/embed/nm_Lh_731Ow" allowfullscreen></iframe><progress id="m2" value="0" max="100"></progress></div>
+<div class="module"><h3>Création de contenu efficace</h3><iframe src="https://www.youtube.com/embed/vPLRI3lE5sM" allowfullscreen></iframe><progress id="m3" value="0" max="100"></progress></div>
+<div class="module"><h3>Lancer sa première stratégie</h3><iframe src="https://www.youtube.com/embed/v3sRh0z1M40" allowfullscreen></iframe><progress id="m4" value="0" max="100"></progress></div>
 </div>
 </section>
 
 <section class="chapter">
-<h2>Fin Chapitre 1</h2>
-<button class="btn" onclick="validate(25)">Valider (+25%)</button>
+<h2>Expérience – Fin Chapitre 1</h2>
+<div class="modules">
+<div class="module"><h3>XP gagnée</h3><p>+25 %</p></div>
+<div class="module"><button class="btn" onclick="validateChapter(25)">Valider Chapitre 1</button></div>
+</div>
 </section>
 
-<section class="chapter hidden" id="ch2">
+<!-- CHAPITRE 2 -->
+<section class="chapter" id="ch2" style="display:none">
 <h2>Chapitre 2 – Intermédiaire</h2>
 <div class="modules">
-<div class="module"><h3>Stratégie digitale</h3></div>
-<div class="module"><h3>Branding & contenu</h3></div>
+<div class="module"><h3>Construire une vraie stratégie digitale</h3></div>
+<div class="module"><h3>Marketing de contenu & branding</h3></div>
 <div class="module"><h3>Publicité en ligne</h3></div>
 <div class="module"><h3>Analyse & optimisation</h3></div>
 </div>
 </section>
 
-<section class="chapter hidden" id="xp2">
-<h2>Fin Chapitre 2</h2>
-<button class="btn" onclick="validate(50)">Valider (+25%)</button>
-</section>
-
-<section class="chapter hidden" id="ch3">
-<h2>Chapitre 3 – Avancé</h2>
+<section class="chapter" id="xp2" style="display:none">
+<h2>Expérience – Fin Chapitre 2</h2>
 <div class="modules">
-<div class="module"><h3>Funnel & parcours client</h3></div>
-<div class="module"><h3>Automatisation & no-code</h3></div>
-<div class="module"><h3>Scaling & publicité avancée</h3></div>
-<div class="module"><h3>Data & croissance durable</h3></div>
+<div class="module"><h3>XP gagnée</h3><p>+25 %</p></div>
+<div class="module"><button class="btn" onclick="validateChapter(50)">Valider Chapitre 2</button></div>
 </div>
 </section>
 
 </div>
 </main>
 
-<footer>© 2025 GC.digital</footer>
+<footer>© 2025 GC.digital – Plateforme de formation Marketing Digital</footer>
 
 <script>
-let progress=localStorage.getItem('progress')?parseInt(localStorage.getItem('progress')):0;
+let progress = localStorage.getItem('progress') ? parseInt(localStorage.getItem('progress')) : 0;
 
-function update(){
- document.getElementById('progress').value=progress;
- document.getElementById('progressText').innerText=progress+'%';
- if(progress>=25) document.getElementById('ch2').classList.remove('hidden');
- if(progress>=50) document.getElementById('xp2').classList.remove('hidden');
- if(progress>=50) document.getElementById('ch3').classList.remove('hidden');
- if(progress>=100){document.getElementById('certificate').innerText='Débloqué';document.getElementById('level').innerText='Débutant acquis'}
+function updateDashboard(){
+ document.getElementById('globalProgress').value = progress;
+ document.getElementById('progressText').innerText = progress + ' %';
+ if(progress >= 25) document.getElementById('ch2').style.display = 'block';
+ if(progress >= 50) document.getElementById('xp2').style.display = 'block';
+ if(progress >= 100){
+  document.getElementById('cert').innerText = 'Certificat débloqué 🎉';
+  document.getElementById('level').innerText = 'Débutant acquis';
+ }
 }
 
-function validate(v){progress=v;localStorage.setItem('progress',progress);update()}
+function validateChapter(val){
+ progress = val;
+ localStorage.setItem('progress', progress);
+ updateDashboard();
+}
 
-document.getElementById('authForm').addEventListener('submit',e=>{
- e.preventDefault();
- fetch('https://TON_BACKEND.vercel.app/api/create-checkout')
- .then(r=>r.json())
- .then(d=>window.location.href=d.url);
+// Simuler lecture vidéo (démonstration)
+['m1','m2','m3','m4'].forEach(id=>{
+ let p = document.getElementById(id);
+ let v = 0;
+ setInterval(()=>{ if(v<100){v+=1;p.value=v;} },800);
 });
 
-if(new URLSearchParams(window.location.search).get('success')){
- document.getElementById('paywall').classList.add('hidden');
- document.getElementById('app').classList.remove('hidden');
-}
+document.getElementById('authForm').addEventListener('submit', e => {
+ e.preventDefault();
+ document.getElementById('paywall').style.display='none';
+ document.getElementById('formation').style.display='block';
+ updateDashboard();
+});
 
-update();
+updateDashboard();
 </script>
-
 </body>
 </html>
-
