--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Bienvenue dans la formation GC.dgital</title>
+<title>GC.digital – Plateforme de formation Marketing Digital</title>
 
 <style>
 :root{
@@ -37,7 +37,7 @@ footer{background:var(--white);border-top:1px solid #e5e5e5;text-align:center;pa
 <header>
 <h1>GC.digital</h1>
 <p>
-GC.digital est une formation de <strong>marketing digital qui aide les débutants et les nouveaux,</strong> conçue pour que vous sentez moins perdus.
+GC.digital est une formation de <strong>marketing digital engineering</strong> conçue pour les débutants qui se sentent perdus.
 La formation transforme le marketing en un système clair : stratégie, contenu, publicité, data et performance.
 L’accès est payant, sécurisé et progressif.
 </p>
@@ -152,3 +152,4 @@ updateDashboard();
 </script>
 </body>
 </html>
+
