--- a/index.html
+++ b/index.html
@@ -3,82 +3,188 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>GC.digital – Plateforme de formation Marketing Digital</title>
+<title>GC.digital – Formation Marketing Digital</title>
 
 <style>
 :root{
---black:#000;
+--black:#000000;
 --dark:#1d1d1f;
---gray:#f5f5f7;
---white:#fff;
---blue:#0071e3;
+--white:#ffffff;
+--blue1:#0f5fff;
+--blue2:#2a8bff;
+--blue3:#5fa8ff;
 }
+
 *{box-sizing:border-box;margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif}
-body{background:var(--gray);color:var(--dark)}
-header{background:var(--white);padding:90px 20px;text-align:center;border-bottom:1px solid #e5e5e5}
-header h1{font-size:3.4rem;text-decoration:underline;text-underline-offset:14px}
-header p{max-width:900px;margin:25px auto 0;font-size:1.2rem;color:#555}
-main{max-width:1200px;margin:90px auto;padding:0 20px}
-h2{text-align:center;font-size:2.4rem;margin-bottom:40px;text-decoration:underline;text-underline-offset:8px}
-h3{text-decoration:underline;text-underline-offset:6px;margin-bottom:12px}
-.chapter{margin-bottom:90px}
-.modules{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px}
-.module{background:var(--white);padding:30px;border-radius:22px;transition:.3s}
-.module:hover{transform:translateY(-6px);box-shadow:0 20px 40px rgba(0,0,0,.08)}
-.btn{background:var(--black);color:var(--white);border:none;padding:16px 36px;border-radius:999px;font-size:1.05rem;cursor:pointer;width:100%}
-progress{width:100%;height:14px;margin-top:10px}
-iframe{width:100%;height:220px;border-radius:14px;border:none}
-footer{background:var(--white);border-top:1px solid #e5e5e5;text-align:center;padding:40px;color:#555}
-@media(max-width:600px){header h1{font-size:2.6rem}}
+
+body{
+min-height:100vh;
+background:linear-gradient(135deg,var(--blue1),var(--blue2),var(--blue3));
+padding:30px;
+}
+
+.wrapper{
+background:transparent;
+}
+
+header{
+background:rgba(255,255,255,0.95);
+backdrop-filter:blur(12px);
+border-radius:32px;
+box-shadow:0 30px 60px rgba(0,0,0,.18);
+padding:100px 30px 80px;
+text-align:center;
+margin-bottom:60px;
+}
+
+header h1{
+font-size:3.6rem;
+color:var(--black);
+text-decoration:underline;
+text-underline-offset:14px;
+}
+
+header p{
+max-width:900px;
+margin:30px auto 0;
+font-size:1.2rem;
+color:#444;
+line-height:1.7;
+}
+
+main{
+max-width:1200px;
+margin:0 auto;
+}
+
+h2{
+text-align:center;
+font-size:2.4rem;
+margin-bottom:40px;
+text-decoration:underline;
+text-underline-offset:10px;
+}
+
+h3{
+text-decoration:underline;
+text-underline-offset:6px;
+margin-bottom:12px;
+}
+
+.chapter{
+background:rgba(255,255,255,0.95);
+border-radius:32px;
+box-shadow:0 30px 60px rgba(0,0,0,.18);
+padding:50px 30px;
+margin-bottom:60px;
+}
+
+.modules{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+gap:30px;
+}
+
+.module{
+background:var(--white);
+border-radius:24px;
+padding:30px;
+transition:0.3s ease;
+}
+
+.module:hover{
+transform:translateY(-6px);
+box-shadow:0 25px 50px rgba(0,0,0,.12);
+}
+
+iframe{
+width:100%;
+height:220px;
+border:none;
+border-radius:14px;
+margin-bottom:12px;
+}
+
+progress{
+width:100%;
+height:14px;
+}
+
+.btn{
+width:100%;
+padding:16px 36px;
+border:none;
+border-radius:999px;
+background:var(--black);
+color:var(--white);
+font-size:1.05rem;
+cursor:pointer;
+}
+
+footer{
+background:rgba(255,255,255,0.95);
+border-radius:32px;
+box-shadow:0 30px 60px rgba(0,0,0,.18);
+text-align:center;
+padding:40px;
+color:#555;
+margin-top:60px;
+}
+
+@media(max-width:600px){
+header h1{font-size:2.7rem}
+header p{font-size:1.05rem}
+}
 </style>
 </head>
 <body>
+<div class="wrapper">
 
 <header>
 <h1>GC.digital</h1>
 <p>
-GC.digital est une formation de <strong>marketing digital engineering</strong> conçue pour les débutants qui se sentent perdus.
-La formation transforme le marketing en un système clair : stratégie, contenu, publicité, data et performance.
-L’accès est payant, sécurisé et progressif.
+GC.digital est une formation de <strong>marketing digital engineering</strong> conçue pour aider les
+<strong>débutants perdus</strong> à structurer le marketing digital comme un vrai système :
+stratégie, contenu, publicité, data et optimisation.
+<br><br>
+<strong>Accès payant, sécurisé et progressif.</strong>
 </p>
 </header>
 
 <main>
 
-<!-- PAYWALL -->
 <section class="chapter" id="paywall" style="text-align:center">
-<h2>Accès sécurisé</h2>
-<p style="max-width:700px;margin:20px auto;color:#555">
-Paiement et inscription obligatoires. Sans compte actif, la formation reste verrouillée.
+<h2>Accès sécurisé à la formation</h2>
+<p style="max-width:720px;margin:20px auto;color:#444">
+Paiement Stripe et création de compte obligatoires.
+Sans paiement validé, aucun contenu n’est accessible.
 </p>
 <form id="authForm" style="max-width:420px;margin:40px auto">
 <input required type="email" placeholder="Email" style="width:100%;padding:14px;border-radius:12px;border:1px solid #ccc;margin-bottom:12px">
 <input required type="password" placeholder="Mot de passe" style="width:100%;padding:14px;border-radius:12px;border:1px solid #ccc;margin-bottom:20px">
 <button class="btn">Payer avec Stripe & créer mon compte</button>
 </form>
-<p style="font-size:.9rem;color:#777">Stripe réel + Auth backend (Firebase / Supabase)</p>
+<p style="font-size:.9rem;color:#555">Stripe réel • Auth sécurisée • Espace membre privé</p>
 </section>
 
 <div id="formation" style="display:none">
 
-<!-- DASHBOARD -->
 <section class="chapter">
 <h2>Dashboard élève</h2>
 <div class="modules">
 <div class="module"><h3>Niveau</h3><p id="level">Débutant</p></div>
-<div class="module"><h3>Progression</h3><progress id="globalProgress" value="0" max="100"></progress><p id="progressText">0 %</p></div>
+<div class="module"><h3>Progression globale</h3><progress id="globalProgress" value="0" max="100"></progress><p id="progressText">0 %</p></div>
 <div class="module"><h3>Certificat</h3><p id="cert">Bloqué (100 % requis)</p></div>
 </div>
 </section>
 
-<!-- CHAPITRE 1 -->
 <section class="chapter">
 <h2>Chapitre 1 – Fondamentaux</h2>
 <div class="modules">
-<div class="module"><h3>Base du marketing digital</h3><iframe src="https://www.youtube.com/embed/VeuspvV7DCg" allowfullscreen></iframe><progress id="m1" value="0" max="100"></progress></div>
-<div class="module"><h3>Réseaux sociaux pour débutants</h3><iframe src="https://www.youtube.com/embed/nm_Lh_731Ow" allowfullscreen></iframe><progress id="m2" value="0" max="100"></progress></div>
-<div class="module"><h3>Création de contenu efficace</h3><iframe src="https://www.youtube.com/embed/vPLRI3lE5sM" allowfullscreen></iframe><progress id="m3" value="0" max="100"></progress></div>
-<div class="module"><h3>Lancer sa première stratégie</h3><iframe src="https://www.youtube.com/embed/v3sRh0z1M40" allowfullscreen></iframe><progress id="m4" value="0" max="100"></progress></div>
+<div class="module"><h3>Base du marketing digital</h3><iframe src="https://www.youtube.com/embed/VeuspvV7DCg"></iframe><progress id="m1" value="0" max="100"></progress></div>
+<div class="module"><h3>Réseaux sociaux pour débutants</h3><iframe src="https://www.youtube.com/embed/nm_Lh_731Ow"></iframe><progress id="m2" value="0" max="100"></progress></div>
+<div class="module"><h3>Création de contenu efficace</h3><iframe src="https://www.youtube.com/embed/vPLRI3lE5sM"></iframe><progress id="m3" value="0" max="100"></progress></div>
+<div class="module"><h3>Lancer sa première stratégie</h3><iframe src="https://www.youtube.com/embed/v3sRh0z1M40"></iframe><progress id="m4" value="0" max="100"></progress></div>
 </div>
 </section>
 
@@ -90,7 +196,6 @@ Paiement et inscription obligatoires. Sans compte actif, la formation reste verr
 </div>
 </section>
 
-<!-- CHAPITRE 2 -->
 <section class="chapter" id="ch2" style="display:none">
 <h2>Chapitre 2 – Intermédiaire</h2>
 <div class="modules">
@@ -105,7 +210,7 @@ Paiement et inscription obligatoires. Sans compte actif, la formation reste verr
 <h2>Expérience – Fin Chapitre 2</h2>
 <div class="modules">
 <div class="module"><h3>XP gagnée</h3><p>+25 %</p></div>
-<div class="module"><button class="btn" onclick="validateChapter(50)">Valider Chapitre 2</button></div>
+<div class="module"><button class="btn" onclick="validateChapter(100)">Valider Chapitre 2</button></div>
 </div>
 </section>
 
@@ -113,6 +218,7 @@ Paiement et inscription obligatoires. Sans compte actif, la formation reste verr
 </main>
 
 <footer>© 2025 GC.digital – Plateforme de formation Marketing Digital</footer>
+</div>
 
 <script>
 let progress = localStorage.getItem('progress') ? parseInt(localStorage.getItem('progress')) : 0;
@@ -130,18 +236,16 @@ function updateDashboard(){
 
 function validateChapter(val){
  progress = val;
- localStorage.setItem('progress', progress);
+ localStorage.setItem('progress',progress);
  updateDashboard();
 }
 
-// Simuler lecture vidéo (démonstration)
 ['m1','m2','m3','m4'].forEach(id=>{
- let p = document.getElementById(id);
- let v = 0;
- setInterval(()=>{ if(v<100){v+=1;p.value=v;} },800);
+ let p=document.getElementById(id);let v=0;
+ setInterval(()=>{if(v<100){v++;p.value=v;}},900);
 });
 
-document.getElementById('authForm').addEventListener('submit', e => {
+document.getElementById('authForm').addEventListener('submit',e=>{
  e.preventDefault();
  document.getElementById('paywall').style.display='none';
  document.getElementById('formation').style.display='block';
@@ -152,4 +256,3 @@ updateDashboard();
 </script>
 </body>
 </html>
-
